--- a/src/components/cart/simplecart.scss
+++ b/src/components/cart/simplecart.scss
@@ -1,7 +1,7 @@
 $background: #eee;
 
 .simple-cart {
-  font-size: 1.2rem;
+  font-size: 15px;
   position: fixed;
   top: 4rem;
   right: 9px;
@@ -20,7 +20,7 @@ $background: #eee;
 .remove {
   width: 30px;
   height: 30px;
-  background: #eee;
+  background: rgb(209, 5, 5);
   border-radius: 50%;
   margin-right: 10px;
 }
